--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
 
-  <title>React App</title>
+  <title>Star Wars</title>
 </head>
 
 <body>
